solved mobile overflow

--- a/aw-spa/src/styles.css
+++ b/aw-spa/src/styles.css
@@ -28,7 +28,9 @@ body,
 #root {
   height: 100%;
   max-width: 100%;
-  /* overflow-x: hidden; */
+}
+body {
+  overflow-x: hidden;
 }
 html {
   scroll-behavior: smooth;
